レイアウトを調整

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
 
 # superbaseの設定
 # https://supabase.com/
-DATABASE_URL="postgres://xxxxxxxxx
-DIRECT_URL="postgres://xxxxxxxxxx
+DATABASE_URL=postgres://xxxxxxxxx
+DIRECT_URL=postgres://xxxxxxxxxx
 
 # NEXTAUTHの設定
 NEXTAUTH_SECRET=xxxxxxxxxx
